--- a/templates/applications.gohtml
+++ b/templates/applications.gohtml
@@ -7,6 +7,7 @@
 <body>
 
 <h1>TEST</h1>
+	<button><a href="/applications/add">+Application</a></button>
 	{{range .}}
 	<p>{{.JobTitle}} - {{.Company}} - {{.AppDate}}</p>
 	{{end}}
