--- a/templates/applications.gohtml
+++ b/templates/applications.gohtml
@@ -6,10 +6,27 @@
 </head>
 <body>
 
-<h1>TEST</h1>
+<h1>Applications</h1>
 	<button><a href="/applications/add">+Application</a></button>
-	{{range .}}
-	<p>{{.JobTitle}} - {{.Company}} - {{.AppDate}}</p>
-	{{end}}
+	<table>
+		<tr>
+			<th>Job Title</th>
+			<th>Company</th>
+			<th>Date Applied</th>
+			<th></th>
+			<th></th>
+			<th></th>
+		</tr>
+		{{range .}}
+		<tr>
+			<td>{{.JobTitle}}</td>
+			<td>{{.Company}}</td>
+			<td>{{.AppDate}}</td>
+			<td><a href="/applications/view?id={{.Id}}">View</a></td>
+			<td><a href="/applications/update?id={{.Id}}">Update</a></td>
+			<td><a href="/applications/remove/execute?id={{.Id}}">DELETE</a></td>
+		</tr>
+		{{end}}
+	</table>
 </body>
 </html>
