--- a/templates/applications.gohtml
+++ b/templates/applications.gohtml
@@ -24,6 +24,7 @@
 			<td>{{.AppDate}}</td>
 			<td><a href="/applications/view?id={{.Id}}">View</a></td>
 			<td><a href="/applications/update?id={{.Id}}">Update</a></td>
+			<td><a href="/interviews/add?id={{.Id}}">Add Interview</a></td>
 			<td><a href="/applications/remove/execute?id={{.Id}}">DELETE</a></td>
 		</tr>
 		{{end}}
