--- a/templates/index.gohtml
+++ b/templates/index.gohtml
@@ -8,6 +8,6 @@
 
 	<h1>We are at the home screen</h1>
 	<p><a href="/applications">Applications</a></p>
-
+	<p><a href="/contacts">Contacts</a></p>
 </body>
 </html>
