--- a/templates/contacts.gohtml
+++ b/templates/contacts.gohtml
@@ -1,10 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="utf-8">
-	<title>Contacts</title>
-</head>
-<body>
+{{template "header"}}
+
 	<h1>Contacts</h1>
 	<button><a href="/contacts/add">+Contact</a></button>
 	<table>
@@ -29,5 +24,5 @@
 		</tr>
 		{{end}}
 	</table>
-</body>
-</html>
+
+{{template "footer"}}
