--- a/templates/applicationAddForm.gohtml
+++ b/templates/applicationAddForm.gohtml
@@ -1,10 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="utf-8">
-	<title>Application:Add</title>
-</head>
-<body>
+{{template "header"}}
+
 <h1>Application Details</h1>
 <form method="post" action="/contact/add/execute" enctype="multipart/form-data">
     <input type="text" name="job_title" placeholder="Job Title" required autofocus>
@@ -15,5 +10,5 @@
     <input type="file" name="cvr_letter" placeholder="Cover Letter">
     <input type="submit">
 </form>
-</body>
-</html>
+
+{{template "footer"}}
