--- a/templates/applications.gohtml
+++ b/templates/applications.gohtml
@@ -1,10 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="utf-8">
-	<title>Applications</title>
-</head>
-<body>
+{{template "header"}}
 
 <h1>Applications</h1>
 	<button><a href="/applications/add">+Application</a></button>
@@ -29,5 +23,5 @@
 		</tr>
 		{{end}}
 	</table>
-</body>
-</html>
+	
+{{template "footer"}}
