--- a/templates/index.gohtml
+++ b/templates/index.gohtml
@@ -1,13 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="utf-8">
-	<title>Home</title>
-</head>
-<body>
+{{template "header"}}
 
 	<h1>We are at the home screen</h1>
 	<p><a href="/applications">Applications</a></p>
 	<p><a href="/contacts">Contacts</a></p>
-</body>
-</html>
+
+{{template "footer"}}
