--- a/templates/applicationAddForm.gohtml
+++ b/templates/applicationAddForm.gohtml
@@ -1,7 +1,7 @@
 {{template "header"}}
 
 <h1>Application Details</h1>
-<form method="post" action="/contact/add/execute" enctype="multipart/form-data">
+<form method="post" action="/applications/add/execute" enctype="multipart/form-data">
     <input type="text" name="job_title" placeholder="Job Title" required autofocus>
     <input type="text" name="description" placeholder="Job Description">
     <input type="url" name="url" placeholder="URL link">
