--- a/templates/applicationUpdateForm.gohtml
+++ b/templates/applicationUpdateForm.gohtml
@@ -2,15 +2,33 @@
 
 <h1>Application Details</h1>
 <form method="post" action="/applications/update/execute?id={{.Id}}&appdate={{.AppDate}}" enctype="multipart/form-data">
-    <input type="text" name="job_title" placeholder="Job Title" required autofocus value="{{.JobTitle}}">
-    <input type="text" name="description" placeholder="Job Description" value="{{.Description}}">
-    <input type="url" name="url" placeholder="URL link" value="{{.Url}}">
-    <input type="text" name="company" placeholder="Company" required value="{{.Company}}">
-    <input type="file" name="resume" placeholder="CV used">
-    <input type="file" name="cvr_letter" placeholder="Cover Letter">
-    <input type="datetime-local" name="offer" placeholder="Offer Accepted?" value="{{.Offer}}">
-    <input type="datetime-local" name="rejected" placeholder="Offer Rejected?" value="{{.Rejected}}">
-    <input type="datetime-local" name="declined" placeholder="Application Declined?" value="{{.Declined}}">
+    <label>Job Title
+        <input type="text" name="job_title" required autofocus value="{{.JobTitle}}">
+    </label>
+    <label>Job Description
+        <input type="text" name="description" value="{{.Description}}">
+    </label>
+    <label>Job URL link
+        <input type="url" name="url" value="{{.Url}}">
+    </label>
+    <label>Company
+        <input type="text" name="company" required value="{{.Company}}">
+    </label>
+    <label>Resume Used
+        <input type="file" name="resume" placeholder="CV used">
+    </label>
+    <label>Cover Letter Used
+        <input type="file" name="cvr_letter" placeholder="Cover Letter">
+    </label>
+    <label>Offer Accepted?
+        <input type="date" name="offerDate">
+    </label>
+    <label>Offer Rejected?
+        <input type="date" name="rejectedDate">
+    </label>
+    <label>Application Declined?
+        <input type="date" name="declinedDate">
+    </label>
     <input type="submit">
 </form>
 
