--- a/templates/interviewAddForm.gohtml
+++ b/templates/interviewAddForm.gohtml
@@ -2,8 +2,13 @@
 
 <h1>Interview Details</h1>
 <form method="post" action="/interviews/add/execute?id={{.Id}}" enctype="multipart/form-data">
-    <input type="datetime-local" name="date" placeholder="Date" required autofocus>
-    <input type="text" name="method" placeholder="Interview Method (in-person, phone, ...)">
+    <label>Interview Scheduled
+    	<input type="date" name="interviewDate" required/>
+    	<input type="time" name="interviewTime" required/>
+    </label>
+    <label>Interview Method
+    	<input type="text" name="method" placeholder="Interview Method (in-person, phone, ...)" required>
+    </label>
     <input type="submit">
 </form>
 
