--- a/templates/interviews.gohtml
+++ b/templates/interviews.gohtml
@@ -2,22 +2,28 @@
 
 	<h1>Interviews</h1>
 	<table>
-		<tr>
-			<th>Interview Time</th>
-			<th>Method Of Interview</th>
-			<th>Job Title</th>
-			<th>Company</th>
-		</tr>
-	{{range .}}
-		<tr>
-			<td>{{.Appointment}}</td>
-			<td>{{.Method}}</td>
-			<td>{{.JobTitle}}</td>
-			<td>{{.Company}}</td>
-			<td><a href="/interviews/update?id={{.Id}}">Update</a></td>
-			<td><a href="/interviews/remove/execute?id={{.Id}}">DELETE</a></td>
-		</tr>
-	{{end}}
+		<thead>
+			<tr>
+				<th scope="col">Interview Time</th>
+				<th scope="col">Method Of Interview</th>
+				<th scope="col">Job Title</th>
+				<th scope="col">Company</th>
+				<th scope="col"></th>
+				<th scope="col"></th>
+			</tr>
+		</thead>
+		<tbody>
+		{{range .}}
+			<tr>
+				<td>{{.Appointment}}</td>
+				<td>{{.Method}}</td>
+				<td>{{.JobTitle}}</td>
+				<td>{{.Company}}</td>
+				<td><a href="/interviews/update?id={{.Id}}">Update</a></td>
+				<td><a href="/interviews/remove/execute?id={{.Id}}">DELETE</a></td>
+			</tr>
+		{{end}}
+		</tbody>
 	</table>
 
 {{template "footer"}}
