added bootstrap aesthetics

--- a/templates/applicationAddForm.gohtml
+++ b/templates/applicationAddForm.gohtml
@@ -2,12 +2,36 @@
 
 <h1>Application Details</h1>
 <form method="post" action="/applications/add/execute" enctype="multipart/form-data">
-    <input type="text" name="job_title" placeholder="Job Title" required autofocus>
-    <input type="text" name="description" placeholder="Job Description">
-    <input type="url" name="url" placeholder="URL link">
-    <input type="text" name="company" placeholder="Company" required>
-    <input type="file" name="resume" placeholder="CV used">
-    <input type="file" name="cvr_letter" placeholder="Cover Letter">
+    <div class="form-group">
+    	<label>Job Title
+    		<input type="text" name="job_title" class="form-control" required autofocus>
+    	</label>
+    </div>
+    <div class="form-group">
+    	<label> Job Description
+    		<input type="text" name="description">
+    	</label>
+	</div>
+	<div class="form-group">
+		<label>URL link
+    		<input type="url" name="url">
+   		</label>
+    </div>
+    <div class="form-group">
+    	<label>Company
+    <input type="text" name="company" required>
+    	</label>
+    </div>
+    <div class="form-group">
+    	<label>CV Used
+    		<input type="file" name="resume">
+    	</label>
+    </div>
+    <div class="form-group">
+    	<label>Cover Letter Used
+    		<input type="file" name="cvr_letter">
+    	</label>
+   	</div>
     <input type="submit">
 </form>
 
