--- a/templates/interviews.gohtml
+++ b/templates/interviews.gohtml
@@ -1,7 +1,7 @@
 {{template "header"}}
 
 	<h1>Interviews</h1>
-	<table>
+	<table class="table table-striped">
 		<thead>
 			<tr>
 				<th scope="col">Interview Time</th>
