--- a/templates/contactAddForm.gohtml
+++ b/templates/contactAddForm.gohtml
@@ -2,12 +2,36 @@
 
 <h1>Contact Details</h1>
 <form method="post" action="/contacts/add/execute" enctype="multipart/form-data">
-    <input type="text" name="name" placeholder="Name" required autofocus>
-    <input type="text" name="position" placeholder="Position">
-    <input type="text" name="number" placeholder="Phone Number">
-    <input type="email" name="email" placeholder="Email">
-    <input type="text" name="company" placeholder="Company" required>
-    <input type="text" name="note" placeholder="Notes">
+    <div class="form-group">
+    	<label>Name
+    		<input type="text" name="name" required autofocus>
+    	</label>
+    </div>
+    <div class="form-group">
+    	<label>Position
+    		<input type="text" name="position">
+    	</label>
+    </div>
+    <div class="form-group">
+    	<label>Phone Number
+    		<input type="text" name="number">
+    	</label>
+    </div>
+    <div class="form-group">
+    	<label>Email
+    		<input type="email" name="email">
+    	</label>
+    </div>
+    <div class="form-group">
+    	<label>Company
+    		<input type="text" name="company" required>
+    	</label>
+    </div>
+    <div class="form-group">
+    	<label>Notes
+    		<input type="text" name="note">
+    	</label>
+    </div>
     <input type="submit">
 </form>
 
