--- a/templates/contactUpdateForm.gohtml
+++ b/templates/contactUpdateForm.gohtml
@@ -2,13 +2,37 @@
 
 <h1>Contact Details</h1>
 <form method="post" action="/contacts/update/execute?id={{.Id}}" enctype="multipart/form-data">
-    <input type="text" name="name" placeholder="Name" required autofocus value="{{.Name}}">
-    <input type="text" name="position" placeholder="Position" value="{{.Position}}">
-    <input type="text" name="number" placeholder="Phone Number" value="{{.Number}}">
-    <input type="email" name="email" placeholder="Email" value="{{.Email}}">
-    <input type="text" name="company" placeholder="Company" required value="{{.Company}}">
-    <input type="text" name="note" placeholder="Notes" value="{{.Note}}">
+    <div class="form-group">
+    	<label>Name
+    		<input type="text" name="name" required autofocus value="{{.Name}}">
+    	</label>
+	</div>
+    <div class="form-group">
+    	<label>Position
+    		<input type="text" name="position" value="{{.Position}}">
+    	</label>
+	</div>
+    <div class="form-group">
+    	<label>Phone Number
+    		<input type="text" name="number" value="{{.Number}}">
+    	</label>
+	</div>
+    <div class="form-group">
+    	<label>Email
+    		<input type="email" name="email" value="{{.Email}}">
+    	</label>
+	</div>
+    <div class="form-group">
+    	<label>Company
+    		<input type="text" name="company" required value="{{.Company}}">
+    	</label>
+	</div>
+    <div class="form-group">
+    	<label>Notes
+    		<input type="text" name="note" value="{{.Note}}">
+    	</label>
+	</div>
     <input type="submit">
-</form>
+</form/>
 
 {{template "footer"}}
