--- a/templates/index.gohtml
+++ b/templates/index.gohtml
@@ -3,5 +3,6 @@
 	<h1>We are at the home screen</h1>
 	<p><a href="/applications">Applications</a></p>
 	<p><a href="/contacts">Contacts</a></p>
+	<p><a href="/interviews">Interviews</a></p>
 
 {{template "footer"}}
