--- a/templates/interviewAddForm.gohtml
+++ b/templates/interviewAddForm.gohtml
@@ -2,13 +2,17 @@
 
 <h1>Interview Details</h1>
 <form method="post" action="/interviews/add/execute?id={{.Id}}" enctype="multipart/form-data">
-    <label>Interview Scheduled
-    	<input type="date" name="interviewDate" required/>
-    	<input type="time" name="interviewTime" required/>
-    </label>
-    <label>Interview Method
-    	<input type="text" name="method" placeholder="Interview Method (in-person, phone, ...)" required>
-    </label>
+    <div class="form-group">
+    	<label>Interview Scheduled
+    		<input type="date" name="interviewDate" required/>
+    		<input type="time" name="interviewTime" required/>
+    	</label>
+    </div>
+    <div class="form-group">
+    	<label>Interview Method
+    		<input type="text" name="method" placeholder="Interview Method (in-person, phone, ...)" required>
+    	</label>
+    </div>
     <input type="submit">
 </form>
 
