--- a/templates/oneApplication.gohtml
+++ b/templates/oneApplication.gohtml
@@ -1,7 +1,7 @@
 {{template "header"}}
 
 <h1>Application to {{.JobTitle}} at {{.Company}}</h1>
-	<table class="table table-dark">
+	<table class="table table-striped">
 		<thead>
 			<tr>
 				<th scope="col">Field</th>
