--- a/templates/templates.gohtml
+++ b/templates/templates.gohtml
@@ -2,8 +2,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
  	<title>JobTracker</title>
+
+ 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 <body>
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -27,14 +32,16 @@
 {{end}}
 
 {{define "footer"}}
-<!-- <footer>
-	<p>You can do anything that you want with this code</p>
-	<p>Source: https://github.com/Ferrallv/jobTracker</p>
-</footer> -->
+<div class="container-fluid navbar fixed-bottom">
+	<footer>
+		<p>You can do anything that you want with this code</p>
+		<p>Source: https://github.com/Ferrallv/jobTracker</p>
+	</footer>
+</div>
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
 </body>
 </html>
 {{end}}
-
-
-"2020-06-08 16:50:41.75902 +0000 UTC"
-"2006-01-02 15:04:05.00000 -0700 MST"
