--- a/templates/index.gohtml
+++ b/templates/index.gohtml
@@ -1,8 +1,12 @@
 {{template "header"}}
-
-	<h1>We are at the home screen</h1>
-	<p><a href="/applications">Applications</a></p>
-	<p><a href="/contacts">Contacts</a></p>
-	<p><a href="/interviews">Interviews</a></p>
-
+<div class="container">
+	<div class="row">
+		<div class="col">
+			<h1>We are at the home screen</h1>
+			<p><a href="/applications">Applications</a></p>
+			<p><a href="/contacts">Contacts</a></p>
+			<p><a href="/interviews">Interviews</a></p>
+		</div>
+	</div>
+</div>
 {{template "footer"}}
