--- a/templates/oneApplication.gohtml
+++ b/templates/oneApplication.gohtml
@@ -1,55 +1,59 @@
 {{template "header"}}
-
-<h1>Application to {{.JobTitle}} at {{.Company}}</h1>
-	<table class="table table-striped">
-		<thead>
-			<tr>
-				<th scope="col">Field</th>
-				<th scope="col">Data</th>
-			</tr>
-		</thead>
-		<tbody>
-			<tr>
-				<th scope="row">Job Title</th>
-				<td>{{.JobTitle}}</td>
-			</tr>
-			<tr>
-				<th scope="row">Description</th>
-				<td>{{.Description}}</td>
-			</tr>
-			<tr>
-				<th scope="row">Url</th>
-				<td>{{.Url}}</td>
-			</tr>
-			<tr>
-				<th scope="row">Company</th>
-				<td>{{.Company}}</td>
-			</tr>
-			<tr>
-				<th scope="row">Resume</th>
-				<td><embed src="/tmp/resume.pdf" type="application/pdf"></embed></td>
-			</tr>
-			<tr>
-				<th scope="row">Cover Letter</th>
-				<td><embed src="/tmp/coverletter.pdf" type="application/pdf"><embed/></td>
-			</tr>
-			<tr>
-				<th scope="row">Date Applied</th>
-				<td>{{.AppDate}}</td>
-			</tr>
-			<tr>
-				<th scope="row">Offer Date</th>
-				<td>{{.Offer}}</td>
-			</tr>
-			<tr>
-				<th scope="row">Date Rejected</th>
-				<td>{{.Rejected}}</td>
-			</tr>
-			<tr>
-				<th scope="row">Date Declined</th>
-				<td>{{.Declined}}</td>
-			</tr>
-		</tbody>
-	</table>
-
+<div class="continer">
+	<div class="row">
+		<div class="col">
+			<h1>Application to {{.JobTitle}} at {{.Company}}</h1>
+			<table class="table table-striped">
+				<thead>
+					<tr>
+						<th scope="col">Field</th>
+						<th scope="col">Data</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr>
+						<th scope="row">Job Title</th>
+						<td>{{.JobTitle}}</td>
+					</tr>
+					<tr>
+						<th scope="row">Description</th>
+						<td>{{.Description}}</td>
+					</tr>
+					<tr>
+						<th scope="row">Url</th>
+						<td>{{.Url}}</td>
+					</tr>
+					<tr>
+						<th scope="row">Company</th>
+						<td>{{.Company}}</td>
+					</tr>
+					<tr>
+						<th scope="row">Resume</th>
+						<td><embed src="/tmp/resume.pdf" type="application/pdf"></embed></td>
+					</tr>
+					<tr>
+						<th scope="row">Cover Letter</th>
+						<td><embed src="/tmp/coverletter.pdf" type="application/pdf"><embed/></td>
+					</tr>
+					<tr>
+						<th scope="row">Date Applied</th>
+						<td>{{.AppDate}}</td>
+					</tr>
+					<tr>
+						<th scope="row">Offer Date</th>
+						<td>{{.Offer}}</td>
+					</tr>
+					<tr>
+						<th scope="row">Date Rejected</th>
+						<td>{{.Rejected}}</td>
+					</tr>
+					<tr>
+						<th scope="row">Date Declined</th>
+						<td>{{.Declined}}</td>
+					</tr>
+				</tbody>
+			</table>
+		</div>
+	</div>
+</div>
 {{template "footer"}}
