--- a/templates/applications.gohtml
+++ b/templates/applications.gohtml
@@ -1,32 +1,36 @@
 {{template "header"}}
-
-<h1>Applications</h1>
-	<button><a href="/applications/add">+Application</a></button>
-	<table class="table table-striped">
-		<thead>
-			<tr>
-				<th scope="col">Job Title</th>
-				<th scope="col">Company</th>
-				<th scope="col">Date Applied</th>
-				<th scope="col"></th>
-				<th scope="col"></th>
-				<th scope="col"></th>
-				<th scope="col"></th>
-			</tr>
-		</thead>
-		<tbody>
-			{{range .}}
-			<tr>
-				<td>{{.JobTitle}}</td>
-				<td>{{.Company}}</td>
-				<td>{{.AppDate}}</td>
-				<td><a href="/applications/view?id={{.Id}}">View</a></td>
-				<td><a href="/applications/update?id={{.Id}}">Update</a></td>
-				<td><a href="/interviews/add?id={{.Id}}">Add Interview</a></td>
-				<td><a href="/applications/remove/execute?id={{.Id}}">DELETE</a></td>
-			</tr>
-			{{end}}
-		</tbody>
-	</table>
-	
+<div class="container">
+    <div class="row">
+        <div class="col">
+			<h1>Applications</h1>
+				<button><a href="/applications/add">+Application</a></button>
+				<table class="table table-striped">
+					<thead>
+						<tr>
+							<th scope="col">Job Title</th>
+							<th scope="col">Company</th>
+							<th scope="col">Date Applied</th>
+							<th scope="col"></th>
+							<th scope="col"></th>
+							<th scope="col"></th>
+							<th scope="col"></th>
+						</tr>
+					</thead>
+					<tbody>
+						{{range .}}
+						<tr>
+							<td>{{.JobTitle}}</td>
+							<td>{{.Company}}</td>
+							<td>{{.AppDate}}</td>
+							<td><a href="/applications/view?id={{.Id}}">View</a></td>
+							<td><a href="/applications/update?id={{.Id}}">Update</a></td>
+							<td><a href="/interviews/add?id={{.Id}}">Add Interview</a></td>
+							<td><a href="/applications/remove/execute?id={{.Id}}">DELETE</a></td>
+						</tr>
+						{{end}}
+					</tbody>
+				</table>
+        </div>
+    </div>
+</div>	
 {{template "footer"}}
