--- a/templates/contactAddForm.gohtml
+++ b/templates/contactAddForm.gohtml
@@ -1,38 +1,42 @@
 {{template "header"}}
-
-<h1>Contact Details</h1>
-<form method="post" action="/contacts/add/execute" enctype="multipart/form-data">
-    <div class="form-group">
-    	<label>Name
-    		<input type="text" name="name" required autofocus>
-    	</label>
+<div class="container">
+    <div class="row">
+        <div class="col">
+            <h1>Contact Details</h1>
+            <form method="post" action="/contacts/add/execute" enctype="multipart/form-data">
+                <div class="form-group">
+                	<label>Name
+                		<input type="text" name="name" required autofocus>
+                	</label>
+                </div>
+                <div class="form-group">
+                	<label>Position
+                		<input type="text" name="position">
+                	</label>
+                </div>
+                <div class="form-group">
+                	<label>Phone Number
+                		<input type="text" name="number">
+                	</label>
+                </div>
+                <div class="form-group">
+                	<label>Email
+                		<input type="email" name="email">
+                	</label>
+                </div>
+                <div class="form-group">
+                	<label>Company
+                		<input type="text" name="company" required>
+                	</label>
+                </div>
+                <div class="form-group">
+                	<label>Notes
+                		<input type="text" name="note">
+                	</label>
+                </div>
+                <input type="submit">
+            </form>
+        </div>
     </div>
-    <div class="form-group">
-    	<label>Position
-    		<input type="text" name="position">
-    	</label>
-    </div>
-    <div class="form-group">
-    	<label>Phone Number
-    		<input type="text" name="number">
-    	</label>
-    </div>
-    <div class="form-group">
-    	<label>Email
-    		<input type="email" name="email">
-    	</label>
-    </div>
-    <div class="form-group">
-    	<label>Company
-    		<input type="text" name="company" required>
-    	</label>
-    </div>
-    <div class="form-group">
-    	<label>Notes
-    		<input type="text" name="note">
-    	</label>
-    </div>
-    <input type="submit">
-</form>
-
+</div>
 {{template "footer"}}
