--- a/templates/contactUpdateForm.gohtml
+++ b/templates/contactUpdateForm.gohtml
@@ -1,38 +1,42 @@
 {{template "header"}}
-
-<h1>Contact Details</h1>
-<form method="post" action="/contacts/update/execute?id={{.Id}}" enctype="multipart/form-data">
-    <div class="form-group">
-    	<label>Name
-    		<input type="text" name="name" required autofocus value="{{.Name}}">
-    	</label>
-	</div>
-    <div class="form-group">
-    	<label>Position
-    		<input type="text" name="position" value="{{.Position}}">
-    	</label>
-	</div>
-    <div class="form-group">
-    	<label>Phone Number
-    		<input type="text" name="number" value="{{.Number}}">
-    	</label>
-	</div>
-    <div class="form-group">
-    	<label>Email
-    		<input type="email" name="email" value="{{.Email}}">
-    	</label>
-	</div>
-    <div class="form-group">
-    	<label>Company
-    		<input type="text" name="company" required value="{{.Company}}">
-    	</label>
-	</div>
-    <div class="form-group">
-    	<label>Notes
-    		<input type="text" name="note" value="{{.Note}}">
-    	</label>
-	</div>
-    <input type="submit">
-</form/>
-
+<div class="container">
+    <div class="row">
+        <div class="col">
+            <h1>Contact Details</h1>
+            <form method="post" action="/contacts/update/execute?id={{.Id}}" enctype="multipart/form-data">
+                <div class="form-group">
+                	<label>Name
+                		<input type="text" name="name" required autofocus value="{{.Name}}">
+                	</label>
+            	</div>
+                <div class="form-group">
+                	<label>Position
+                		<input type="text" name="position" value="{{.Position}}">
+                	</label>
+            	</div>
+                <div class="form-group">
+                	<label>Phone Number
+                		<input type="text" name="number" value="{{.Number}}">
+                	</label>
+            	</div>
+                <div class="form-group">
+                	<label>Email
+                		<input type="email" name="email" value="{{.Email}}">
+                	</label>
+            	</div>
+                <div class="form-group">
+                	<label>Company
+                		<input type="text" name="company" required value="{{.Company}}">
+                	</label>
+            	</div>
+                <div class="form-group">
+                	<label>Notes
+                		<input type="text" name="note" value="{{.Note}}">
+                	</label>
+            	</div>
+                <input type="submit">
+            </form/>
+        </div>
+    </div>
+</div>
 {{template "footer"}}
